feat(core): 新增远程控制与AI面试官功能
- 在pom.xml中新增im-remote和im-remote-agent模块
- 重构README.md增加远程控制和AI面试官功能说明
- 添加AI面试官相关配置项和知识库检索功能
- 实现远程控制服务端中继和被控端Agent
- 集成Electron桌面端自动启动被控端Agent功能
- 更新项目模块数量从9个扩展到11个
- 添加远程控制WebSocket端点和AES-GCM端到端加密
- 集成阿里云百炼DashScope AI模型接入
- 实现BM25关键词检索替代向量检索方案